Fix Scroller Spacing for Private Channels/DM List

--- a/themes/DiscordTheme.css
+++ b/themes/DiscordTheme.css
@@ -4,7 +4,7 @@
 }
 /* Profile Panel - Height */
 .visual-refresh .container__37e49 {
-  	height: 52px;
+  	height: 48px;
 }
 
 /* Channel List - Bottom */
@@ -22,5 +22,5 @@
 
 /* DM List - Bottom */
 .visual-refresh .scroller__99e7c {
-  	margin-bottom: 75px;
+  	margin-bottom: calc(var(--custom-app-panels-height, 0) + 25px);
 }
